--- a/Readme
+++ b/Readme
@@ -1,1 +1,3 @@
-This is a Drupal 7 module that would allow a user to add extra fields to the site contact form. No gui to add fields, just edit the contact_add_fields.module file based on the comments.
+This is a Drupal 7 module that would allow a user to add extra fields to the site contact form. 
+No gui to add fields, just edit the contact_add_fields.module file based on the comments.
+Create a folder named contact_add_fields, and upload it into yourwebsite/sites/all/modules.
